--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 <body>
     <div class="container-fluid">
-        <img width="120px" src="Meta-Logo.png-2560px-Meta-Logo.png" alt="Meta Logo">
+        <img width="120px" src="WhatsApp Image 2024-10-03 at 3.43.07 AM (1).jpeg">
     </div>
     <div class="content">
         <div class="col-sm-6">
